<resources>
    <string name="app_name">Gitteroid</string>
    <string name="title_activity_main">Chat room</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="signout">Sign Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="loading">Loading…</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_leave">Leave</string>
    <string name="new_message">New message</string>
    <string name="exit">Exit</string>
    <string name="message_empty">Text of message is empty</string>
    <string name="enable_notif">Enable notification</string>
    <string name="enable_notif_sound">Notification sound</string>
    <string name="enable_notif_vibro">Notification vibration</string>
    <string name="enable_notif_my_name_desc">Get notification only with the mention of my name</string>
    <string name="enable_notif_my_name_title">Only with the mention my name</string>
    <string name="edit_message">Edit message</string>
    <string name="delete_message">Delete message</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_network">No network connection</string>
    <string name="retry_send">Retry send</string>
    <string name="copy_text">Copy text</string>
    <string name="deleted">Deleted</string>
    <string name="deleted_error">Deleted error</string>
    <string name="changes">Please restart application to apply new settings</string>
    <string name="error_send">Error sending message</string>
    <string name="message_deleted">This message was deleted</string>
    <string name="updated">Updated</string>
    <string name="updated_error">Updated error</string>
    <string name="load_mess">Load messages</string>
    <string name="count_load_mess">Number messages for loading</string>
    <string name="links">Links</string>
    <string name="quote">Quote</string>
    <string name="edit_list_room">Edit list rooms</string>
    <string name="leave_from_one_to_one">Can\'t leave from one to one chat</string>
    <string name="total_people">Total people:</string>
    <string name="error">Error</string>
    <string name="type_to_compose">Type to compose</string>
    <string name="refreshing">REFRESHING</string>
    <string name="complete">COMPLETE</string>
    <string name="enable_background_app_desc">Leave to work messages service in the background</string>
    <string name="enable_background_service">Work in background</string>
    <string name="app_work">Work applications</string>
    <string name="search_room">Search rooms</string>
    <string name="save_list_room">Save list rooms</string>
    <string name="end_edit_list">You need end editing list rooms</string>
    <string name="join_room">Join room</string>
    <string name="error_auth">Error authorization</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="error_load_rooms">Error load rooms</string>
    <string name="sign_in">Sign in</string>
    <string name="all">All</string>
    <string name="close_room">Close room</string>
    <string name="nothing_to_close">Nothing to close</string>
    <string name="cannt_close_single_room">Can\'t close single room</string>
    <string name="scroll_to_new_messages">Scroll to new messages</string>
    <string name="write_a_message">Write a message</string>
    <string name="no_result">No result</string>
    <string name="no_messages_try_to_load">No messages for this room. Try to press refresh for load messages.</string>
    <string name="refresh">Refresh</string>
    <string name="no_rooms">No rooms</string>
    <string name="wait_for_loading_rooms">Wait for loading rooms…</string>
    <string name="retry">Retry</string>
</resources>
