<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_notifications">
        <SwitchPreference
            android:defaultValue="true"
            android:key="enable_notif"
            android:title="@string/enable_notif" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="enable_notif"
            android:key="notif_sound"
            android:title="@string/enable_notif_sound" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="enable_notif"
            android:key="notif_vibro"
            android:title="@string/enable_notif_vibro" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/load_mess">
        <EditTextPreference
            android:id="@+id/number_mess_editText"
            android:defaultValue="10"
            android:inputType="numberSigned"
            android:key="number_load_mess"
            android:title="@string/count_load_mess"
            android:summary="Range of messages from 10 to 25"/>
    </PreferenceCategory>
</PreferenceScreen>
