<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.activities.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="always"/>
    <item
        android:id="@+id/close_room"
        android:icon="@drawable/ic_close"
        android:orderInCategory="100"
        android:title="@string/close_room"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_leave"
        android:icon="@drawable/ic_leave_from_room"
        android:orderInCategory="100"
        android:title="@string/action_leave"
        app:showAsAction="ifRoom" />
</menu>
