<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_room"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/search_room"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/action_edit_room"
        android:icon="@mipmap/ic_edit"
        android:orderInCategory="100"
        android:title="@string/edit_list_room"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@mipmap/ic_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>